# nameit

./: .gitmodules  CMakeLists.txt  Readme.md  TODO  package.xml
launch/: sbi.launch
msg/: DescriptionTags.msg  WordOccurrence.msg
nameit/: google_name_it  google_sbi_tagit.py  nameit.py  nameit_client  nameitu.py
srv/: NameItGoogle.srv
